# codi_boot

./: Cargo.toml  flake.nix
.github/workflows/: ci-debug-builds.yml  ci-releases.yml  ci-tests.yml
src/: consts.rs  lib.rs  main.rs
