[package]
name = "codi_bootload"
version = "0.1.0"
edition = "2018"

[lib]
name = "codi_bootload"
path = "src/lib.rs"

[[bin]]
name = "codi-bootload"
path = "src/bin/codi_bootload.rs"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
panic-abort = "0.3.2"

[dependencies.stm32l4]
version = "0.14.0"
features = ["stm32l4r9", "rt"]

[dependencies.codi_os_proto]
git = "https://github.com/Cosmo-CoDiOS/codi_protos"
branch = "main"

[dependencies.codi_proto_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protos"
branch = "main"
features = ["runs-on-stm32"]

[dependencies.codi_stock_proto]
git = "https://github.com/Cosmo-CoDiOS/codi_protos"
branch = "main"

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
debug = false
