[package]
name = "codi_bootload"
version = "0.1.0"
edition = "2021"

[lib]
name = "codi_bootload"
path = "src/lib.rs"

[[bin]]
name = "codi-bootload"
path = "src/bin/codi_bootload.rs"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-abort = "0.3.2"
panic-halt = "0.2.0"

[dependencies.stm32l4xx-hal]
git = "https://github.com/stm32-rs/stm32l4xx-hal"
rev = "f93b5052b5c9470b153e8cc524bfa6627cc39b8f"
features = ["stm32l4r9"]

[dependencies.codi_bootload_proto]
git = "https://github.com/Cosmo-CoDiOS/codi_protos"
branch = "main"

[dependencies.codi_proto_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protos"
branch = "main"
features = ["runs-on-stm32"]
default-features = false

[profile.release]
opt-level = 's'
codegen-units = 1
debug = true
lto = true
strip = true
panic = "abort"
incremental = false

[profile.release.package."*"]
opt-level = 's'
codegen-units = 1
debug = true
strip = true
incremental = false
