[package]
name = "codi_boot"
version = "0.1.0"
edition = "2021"

[lib]
name = "codi_boot"
path = "src/lib.rs"

[[bin]]
name = "codi_boot"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
panic-abort = "0.3.2"
panic-halt = "0.2.0"
core2 = { version = "*", default-features = false }

[dependencies.stm32l4xx-hal]
git = "https://github.com/stm32-rs/stm32l4xx-hal"
rev = "f93b5052b5c9470b153e8cc524bfa6627cc39b8f"
features = ["stm32l4r9"]

[dependencies.codi_boot_protocol]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"

[dependencies.codi_protocol_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
features = ["stm32"]
default-features = false

[profile.dev]
opt-level = 's'
codegen-units = 1
lto = true
debug = true
strip = true
panic = "abort"
incremental = false

[profile.dev.package."*"]
opt-level = 's'
codegen-units = 1
strip = true
incremental = false
debug = true

[profile.release]
opt-level = 's'
codegen-units = 1
debug = true
lto = true
strip = true
panic = "abort"
incremental = false

[profile.release.package."*"]
opt-level = 's'
codegen-units = 1
debug = true
strip = true
incremental = false
